wip on customer delete, udpdate
